tests/Jroc.Test262.Tests/built-ins/Error/JavaScript/internal-prototype.js
assert.sameValue(
  Function.prototype.isPrototypeOf(Error().constructor),
  true,
  'Function.prototype.isPrototypeOf(err1.constructor) returns true'
);

assert.sameValue(
  Function.prototype.isPrototypeOf(Error.constructor),
  true,
  'Function.prototype.isPrototypeOf(Error.constructor) returns true'
);

